--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
+    "axios": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.5",
-    "react-router-dom": "^6.4.5"
+    "react-router-dom": "^6.4.5",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
@@ -27,6 +29,7 @@
   },
   "scripts": {
     "dev": "vite --host",
+    "start": "react-scripts start",
     "preview": "vite preview --host",
     "prebuild": "rm -rfv dist",
     "build": "tsc && vite build",
