--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
     "@mui/x-date-pickers": "^5.0.17",
+    "axios": "^1.3.1",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.1.8",
     "react-router": "^6.4.5",
     "react-router-dom": "^6.4.5"
   },
