--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-jwt": "^1.1.8",
     "react-router": "^6.4.5",
-    "react-router-dom": "^6.4.5"
+    "react-router-dom": "^6.4.5",
+    "socket.io-client": "^4.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
