--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-infinite-scroller": "^1.2.6",
     "react-jwt": "^1.1.8",
     "react-router": "^6.4.5",
-    "react-router-dom": "^6.4.5"
+    "react-router-dom": "^6.4.5",
+    "socket.io-client": "^4.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
