--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-infinite-scroller": "^1.2.6",
+    "react-insta-stories": "^2.5.9",
     "react-jwt": "^1.1.8",
     "react-router": "^6.4.5",
     "react-router-dom": "^6.4.5"
