--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,15 @@
 name: CI
 
 on:
-  pull_request:
+  push:
     branches:
+      - dev
       - main
-      - development
-      - next
+  pull_request:
+    types: [opened, synchronize, reopened, closed]
+    branches:
+      - dev
+      - main
 
 jobs:
   build:
