--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-cookie": "^4.1.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroller": "^1.2.6",
